remove duplicate word

--- a/documents/CWP/cwp-wg-visualization.tex
+++ b/documents/CWP/cwp-wg-visualization.tex
@@ -261,7 +261,7 @@ those platforms officially supported by the experiment. It is then possible to h
 which can be easily and broadly distributed. %even for outreach and educational activities for the general public.
 
 The primary drawback to this approach is that, with no direct access to the experimental data, some
-some information is necessarily not accessible. Moreover, every time there is the need to modify the content of the
+information is necessarily not accessible. Moreover, every time there is the need to modify the content of the
 intermediate data files, one needs to run the data extraction tools on the native data again.
 In addition to that, only events which are identified as potentially interesting are extracted and their
 data reduced to be stored in the intermediate data file; so, if the end user wants to analyze and visualize other
